--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
          <div class="card">
              <div class="imgBox">
                  <div class="bark"></div>
-                <img src="swc.jpg" style="min-width: 300px;
+                <img src="swc.JPG" style="min-width: 300px;
                  max-height: 400px;">
              </div>
              <div class="details">
