--- a/index.html
+++ b/index.html
@@ -346,25 +346,25 @@
              <div class="details">
                  <h4 class="color1" >Happy Birthday</h4>
                  <h4 class="color1" >Pankhuri ❣</h4>
-                 <p>Happy (happiest*) Birthday meri pankhuri🥰</p>
-                 <p>😚❤ Urf pankhu🙉...urf munni😹😹😙...May</p> 
-                 <p>god shower his blessings upon you nd fulfill all</p> 
-                 <p>your dreams and hope you achieve everything</p>
-                 <p>you want in your life..(bhagwaan ka diya hua</p>
-                 <p>sab kuch hai tere paas phr bhi 😹😹🙉)</p> 
-                 <p>Khush rho😌, Safe rho😷 aur sada suhagan</p>
-                 <p>raho😆❤.. Expected to tha nhi ki tera </p> 
-                 <p>bday bhi iss quarantine me hi manega but ab </p>
-                 <p>hai to kya kre😪...We were planning to</p> 
-                 <p>celebrate your b'day in the best way</p> 
-                 <p>we could but we couldn't!☹ Lockdown hai to</p> 
-                 <p>kya hua...still we all decided to make this day</p> 
-                 <p>worth remembering to you hope you'll be much</p>
-                 <p>much happy with the surprise...❤🤗 Hoping </p> 
-                 <p>to see you soon babe, loads of love ❤❤😘😘</p>
-                 <p>(nd don't forget to say special thanks to</p> 
-                 <p>Anshul 🤭) Iss baar ghar pe manao tum</p>
-                 <p>apna b'day achhe se😁❤🙉</p>
+                 <p style="font-size: 12px;">Happy (happiest*) Birthday meri pankhuri🥰</p>
+                 <p style="font-size: 12px;">😚❤ Urf pankhu🙉...urf munni😹😹😙...May</p> 
+                 <p style="font-size: 12px;">god shower his blessings upon you nd fulfill all</p> 
+                 <p style="font-size: 12px;">your dreams and hope you achieve everything</p>
+                 <p style="font-size: 12px;">you want in your life..(bhagwaan ka diya hua</p>
+                 <p style="font-size: 12px;">sab kuch hai tere paas phr bhi 😹😹🙉)</p> 
+                 <p style="font-size: 12px;">Khush rho😌, Safe rho😷 aur sada suhagan</p>
+                 <p style="font-size: 12px;">raho😆❤.. Expected to tha nhi ki tera </p> 
+                 <p style="font-size: 12px;">bday bhi iss quarantine me hi manega but ab </p>
+                 <p style="font-size: 12px;">hai to kya kre😪...We were planning to</p> 
+                 <p style="font-size: 12px;">celebrate your b'day in the best way</p> 
+                 <p style="font-size: 12px;">we could but we couldn't!☹ Lockdown hai to</p> 
+                 <p style="font-size: 12px;">kya hua...still we all decided to make this day</p> 
+                 <p style="font-size: 12px;">worth remembering to you hope you'll be much</p>
+                 <p style="font-size: 12px;">much happy with the surprise...❤🤗 Hoping </p> 
+                 <p style="font-size: 12px;">to see you soon babe, loads of love ❤❤😘😘</p>
+                 <p style="font-size: 12px;">(nd don't forget to say special thanks to</p> 
+                 <p style="font-size: 12px;">Anshul 🤭) Iss baar ghar pe manao tum</p>
+                 <p style="font-size: 12px;">apna b'day achhe se😁❤🙉</p>
                  <p class="text-right">Mansi ❣</p>
              </div>
          </div>
@@ -547,18 +547,18 @@
              <div class="details">
                  <h4 class="color1" >Happy Birthday</h4>
                  <h4 class="color1" style="padding-bottom: 1%;">Pankhudi didi❤🍬🥳</h4>
-                 <p>Hey pankhudi...happy birthday dear!</p>
-                 <p>Celebrate your bday with your family this year...</p>
-                 <p>nxt year i wont spare you😜coz party to deni padegi apko💁‍♀</p>
-                 <p>When i saw you for the first time ...i nvr thought that we</p>
-                 <p>would have such a good bond in future😊....from sharing</p>
-                 <p>those dirty lame jokes to those hot gossips...</p>
-                 <p>and making fun of some ppl (i wont take the names</p>
-                 <p>though🤭) we got to know...about our common taste😎</p>
-                 <p>in such a short span of time...hope this bond</p>
-                 <p>continues to get stronger ..wishing you all the</p>
-                 <p>happiness you deserve and a great ...successful lyf</p>
-                 <p>ahead!..many many happy returns of the day didi💃❤🍭🎂🥳</p>
+                 <p style="font-size: 12px;">Hey pankhudi...happy birthday dear!</p>
+                 <p style="font-size: 12px;">Celebrate your bday with your family this year...</p>
+                 <p style="font-size: 12px;">nxt year i wont spare you😜coz party to deni padegi apko💁‍♀</p>
+                 <p style="font-size: 12px;">When i saw you for the first time ...i nvr thought that we</p>
+                 <p style="font-size: 12px;">would have such a good bond in future😊....from sharing</p>
+                 <p style="font-size: 12px;">those dirty lame jokes to those hot gossips...</p>
+                 <p style="font-size: 12px;">and making fun of some ppl (i wont take the names</p>
+                 <p style="font-size: 12px;">though🤭) we got to know...about our common taste😎</p>
+                 <p style="font-size: 12px;">in such a short span of time...hope this bond</p>
+                 <p style="font-size: 12px;">continues to get stronger ..wishing you all the</p>
+                 <p style="font-size: 12px;">happiness you deserve and a great ...successful lyf</p>
+                 <p style="font-size: 12px;">ahead!..many many happy returns of the day didi💃❤🍭🎂🥳</p>
                  <p class="text-right">Shruti</p>
              </div>
          </div>
@@ -631,27 +631,27 @@
              <div class="details" >
                  <h4 class="color1" >Nibbi ko</h4>
                  <h4 class="color1" >Happy Birthday</h4>
-                 <p>So pankhuri kya be 19 ki hogyi itni</p>
-                 <p>bdi 🌚🌝 lekin humhare liye nibbi</p>
-                 <p>hi rho gi 🤣 Chutiya Aurat beta jitna</p>
-                 <p>seedhi bnti ho na tm ho nhi😆</p>
-                 <p>Sb gyaan hai tmhe 🙂 zbrdasti</p>
-                 <p>ka natak krti ho 😎</p>
-                 <p>Baaki na ab hum single bolte kb</p>
-                 <p>mingle hogyi 🤭 but jo bhi hua sahi</p>
-                 <p>hai❤️ Lekin harami ho hi tm beta</p>
-                 <p>Pdhai Mein to tez ho hi tm.. Humse</p>
-                 <p>jyada jldi to tmhe h ki humhari bndi</p>
-                 <p>bn jaye 😂😅 chinta na bna</p>
-                 <p>lenge jldi.. Bholenaath kre aur keeda kaate</p>
-                 <p>tmhe 🤣🤣 Ab to 8 cgpa holder hogyi.. Bde log</p>
-                 <p>🌝 lekin kamini bahut ho and yes i remember</p>
-                 <p>how our friendship started neha se</p>
-                 <p>ldai ki wajah se 😅Chalo ab jyada nhi</p>
-                 <p>likhenge kya pta roo do🙂</p>
-                 <p>lockdown hai to kya hua party chahiye college</p>
-                 <p>khulte hi 🙂 and Yes you are bitch 🙂❤️</p>
-                 <p>Happy Birthday Nibbi ❤️✨</p>
+                 <p >So pankhuri kya be 19 ki hogyi itni</p>
+                 <p >bdi 🌚🌝 lekin humhare liye nibbi</p>
+                 <p >hi rho gi 🤣 Chutiya Aurat beta jitna</p>
+                 <p >seedhi bnti ho na tm ho nhi😆</p>
+                 <p >Sb gyaan hai tmhe 🙂 zbrdasti</p>
+                 <p >ka natak krti ho 😎</p>
+                 <p >Baaki na ab hum single bolte kb</p>
+                 <p >mingle hogyi 🤭 but jo bhi hua sahi</p>
+                 <p >hai❤️ Lekin harami ho hi tm beta</p>
+                 <p >Pdhai Mein to tez ho hi tm.. Humse</p>
+                 <p >jyada jldi to tmhe h ki humhari bndi</p>
+                 <p >bn jaye 😂😅 chinta na bna</p>
+                 <p >lenge jldi.. Bholenaath kre aur keeda kaate</p>
+                 <p >tmhe 🤣🤣 Ab to 8 cgpa holder hogyi.. Bde log</p>
+                 <p >🌝 lekin kamini bahut ho and yes i remember</p>
+                 <p >how our friendship started neha se</p>
+                 <p >ldai ki wajah se 😅Chalo ab jyada nhi</p>
+                 <p >likhenge kya pta roo do🙂</p>
+                 <p >lockdown hai to kya hua party chahiye college</p>
+                 <p >khulte hi 🙂 and Yes you are bitch 🙂❤️</p>
+                 <p >Happy Birthday Nibbi ❤️✨</p>
                  <p class="text-right">Yash</p>
              </div>
          </div>
@@ -674,8 +674,8 @@
                   <h4 class="color1">Janamdin Mubarak</h4>
                   <h4 class="color1">ho Nibbi😁</h4>
                  <p>Nibbi, ho to vaise tum katai chutiya,</p>
-                 <p>hmare upar jaan leva hamla bhi kiya tha🤷🏽‍♂️,</p>
-                 <p>seedha bnne ka natak krti ho, lekin</p>
+                 <p>hmare upar jaan leva hamla bhi kiya tha</p>
+                 <p>🤷🏽‍♂️,seedha bnne ka natak krti ho, lekin</p>
                  <p>tb bhi bahut sahi ho, best thing</p>
                  <p>khul ke jeeti ho. Madad krne ke liye</p>
                  <p>bahut bahut bahut shukriya🙏🏽😅.</p>
