--- a/index.html
+++ b/index.html
@@ -631,27 +631,27 @@
              <div class="details" >
                  <h4 class="color1" >Nibbi ko</h4>
                  <h4 class="color1" >Happy Birthday</h4>
-                 <p >So pankhuri kya be 19 ki hogyi itni</p>
-                 <p >bdi 🌚🌝 lekin humhare liye nibbi</p>
-                 <p >hi rho gi 🤣 Chutiya Aurat beta jitna</p>
-                 <p >seedhi bnti ho na tm ho nhi😆</p>
-                 <p >Sb gyaan hai tmhe 🙂 zbrdasti</p>
-                 <p >ka natak krti ho 😎</p>
-                 <p >Baaki na ab hum single bolte kb</p>
-                 <p >mingle hogyi 🤭 but jo bhi hua sahi</p>
-                 <p >hai❤️ Lekin harami ho hi tm beta</p>
-                 <p >Pdhai Mein to tez ho hi tm.. Humse</p>
-                 <p >jyada jldi to tmhe h ki humhari bndi</p>
-                 <p >bn jaye 😂😅 chinta na bna</p>
-                 <p >lenge jldi.. Bholenaath kre aur keeda kaate</p>
-                 <p >tmhe 🤣🤣 Ab to 8 cgpa holder hogyi.. Bde log</p>
-                 <p >🌝 lekin kamini bahut ho and yes i remember</p>
-                 <p >how our friendship started neha se</p>
-                 <p >ldai ki wajah se 😅Chalo ab jyada nhi</p>
-                 <p >likhenge kya pta roo do🙂</p>
-                 <p >lockdown hai to kya hua party chahiye college</p>
-                 <p >khulte hi 🙂 and Yes you are bitch 🙂❤️</p>
-                 <p >Happy Birthday Nibbi ❤️✨</p>
+                 <p style="font-size: 12px;">So pankhuri kya be 19 ki hogyi itni</p>
+                 <p style="font-size: 12px;">bdi 🌚🌝 lekin humhare liye nibbi</p>
+                 <p style="font-size: 12px;">hi rho gi 🤣 Chutiya Aurat beta jitna</p>
+                 <p style="font-size: 12px;">seedhi bnti ho na tm ho nhi😆</p>
+                 <p style="font-size: 12px;">Sb gyaan hai tmhe 🙂 zbrdasti</p>
+                 <p style="font-size: 12px;">ka natak krti ho 😎</p>
+                 <p style="font-size: 12px;">Baaki na ab hum single bolte kb</p>
+                 <p style="font-size: 12px;">mingle hogyi 🤭 but jo bhi hua sahi</p>
+                 <p style="font-size: 12px;">hai❤️ Lekin harami ho hi tm beta</p>
+                 <p style="font-size: 12px;">Pdhai Mein to tez ho hi tm.. Humse</p>
+                 <p style="font-size: 12px;">jyada jldi to tmhe h ki humhari bndi</p>
+                 <p style="font-size: 12px;">bn jaye 😂😅 chinta na bna</p>
+                 <p style="font-size: 12px;">lenge jldi.. Bholenaath kre aur keeda kaate</p>
+                 <p style="font-size: 12px;">tmhe 🤣🤣 Ab to 8 cgpa holder hogyi.. Bde log</p>
+                 <p style="font-size: 12px;">🌝 lekin kamini bahut ho and yes i remember</p>
+                 <p style="font-size: 12px;">how our friendship started neha se</p>
+                 <p style="font-size: 12px;">ldai ki wajah se 😅Chalo ab jyada nhi</p>
+                 <p style="font-size: 12px;">likhenge kya pta roo do🙂</p>
+                 <p style="font-size: 12px;">lockdown hai to kya hua party chahiye college</p>
+                 <p style="font-size: 12px;">khulte hi 🙂 and Yes you are bitch 🙂❤️</p>
+                 <p style="font-size: 12px;">Happy Birthday Nibbi ❤️✨</p>
                  <p class="text-right">Yash</p>
              </div>
          </div>
