--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@
 
 
       <div class="swiper-slide img-center">
-        <div style="font-size: 2rem; font-family: 'Permanent Marker', cursive; color: #ffffff;">This birthday, I wish you abundant happiness and love😁💖. May all your dreams <br>turn into reality and may lady luck visit your home today🥰. Happy birthday😘💗!
-        <img src="Nibbi.jpeg" alt="" style="height: 60%; width: 30%; margin-top:1%"></div>
+        <div class="nibbi-text">This birthday, We wish you abundant happiness and love😁💖. May all your dreams <br>turn into reality and may lady luck visit your home today🥰. Happy birthday😘💗!
+        <img src="Nibbi.jpeg" alt="" class="nibbi-img"></div>
       </div>
 
     </div>
