--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
 
 
       <div class="swiper-slide img-center">
-        <div class="nibbi-text">This birthday, We wish you abundant happiness and love😁💖. May all your dreams <br>turn into reality and may lady luck visit your home today🥰. Happy birthday😘💗!
+        <div class="nibbi-text">This birthday, We wish you abundant happiness and love😁💖. May all your dreams <br>turn into reality and may lady luck visit your home today🥰. Happy birthday😘💗! <br>
         <img src="Nibbi.jpeg" alt="" class="nibbi-img"></div>
       </div>
 
